# scheduling-service

./: .gitignore  Makefile  README.md  pyproject.toml
api/v1/: views.py
core/: models.py
core/clients/: geocoding_client.py  partner_client.py  zip_code_client.py
core/data_access/: location_dal.py
core/migrations/: 0001_initial.py
core/services/: scheduling_service.py
web_api/: settings.py  urls.py
web_api/config/: base.py
